# hexecuteif

./: .copier-answers.yml  CHANGELOG.md  LICENSE  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
buildSrc/src/main/kotlin/hexecuteif/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexecuteif/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/java/ru/n08i40k/hexecuteif/: HexecuteIf.java
common/src/main/java/ru/n08i40k/hexecuteif/casting/patterns/: MediaAction.kt  OpCanBreakBlock.kt  OpCanPlaceBlock.kt
common/src/main/java/ru/n08i40k/hexecuteif/mixin/: HexecuteIfMixinConfigPlugin.java  MixinDatagenMain.java
common/src/main/java/ru/n08i40k/hexecuteif/registry/: HexecuteIfPatternRegistry.java
common/src/main/kotlin/ru/n08i40k/hexecuteif/: HexecuteIf.kt  HexecuteIfAbstractions.kt  HexecuteIfClient.kt
common/src/main/kotlin/ru/n08i40k/hexecuteif/casting/actions/: MediaAction.kt  OpCanBreakBlock.kt  OpCanPlaceBlock.kt  OpInvOccupiedSlots.kt  OpInvSlotCount.kt  OpInvSlotItemCount.kt
common/src/main/kotlin/ru/n08i40k/hexecuteif/config/: HexecuteIfClientConfig.kt  HexecuteIfServerConfig.kt
common/src/main/kotlin/ru/n08i40k/hexecuteif/datagen/: HexecuteIfActionTags.kt
common/src/main/kotlin/ru/n08i40k/hexecuteif/networking/: HexecuteIfNetworking.kt
common/src/main/kotlin/ru/n08i40k/hexecuteif/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
common/src/main/kotlin/ru/n08i40k/hexecuteif/registry/: HexecuteIfActions.kt  HexecuteIfRegistrar.kt
common/src/main/kotlin/ru/n08i40k/hexecuteif/utils/: CasterUtils.kt  InventoryUtils.kt
common/src/main/resources/: hexecuteif-common.mixins.json  pack.mcmeta
common/src/main/resources/assets/hexecuteif/lang/: en_us.flatten.json5  en_us.json  zh_cn.flatten.json5
doc/: README.md  hexdoc.toml
doc/resources/assets/hexecuteif/lang/: en_us.flatten.json5
doc/src/hexdoc_hexecuteif/: _hooks.py
fabric/: build.gradle  build.gradle.kts  gradle.properties
fabric/src/main/java/ru/n08i40k/hexecuteif/fabric/: HexecuteIfConfigFabric.java
fabric/src/main/kotlin/ru/n08i40k/hexecuteif/fabric/: FabricHexecuteIf.kt  FabricHexecuteIfClient.kt  FabricHexecuteIfModMenu.kt  FabricHexecuteIfServer.kt  HexecuteIfAbstractionsImpl.kt
fabric/src/main/resources/: fabric.mod.json  hexecuteif-fabric.mixins.json
forge/: build.gradle  build.gradle.kts
forge/src/main/java/ru/n08i40k/hexecuteif/forge/: HexecuteIfConfigForge.java
forge/src/main/kotlin/ru/n08i40k/hexecuteif/forge/: ForgeHexecuteIf.kt  ForgeHexecuteIfClient.kt  ForgeHexecuteIfServer.kt  HexecuteIfAbstractionsImpl.kt
forge/src/main/resources/: hexecuteif-forge.mixins.json  pack.mcmeta
(+22 files in other folders)
